--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,9 @@
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>watchcharm</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+    integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="./css/styles.css" />
 </head>
 
@@ -16,7 +19,7 @@
     <load src="partials/hero.html" />
     <load src="partials/about-us.html" />
     <load src="partials/catalog.html" />
-    <load src="partials/section-4.html" />
+    <load src="partials/advertisement.html" />
     <load src="partials/sale.html" />
     <load src="partials/reviews.html" />
     <load src="partials/contact-us.html" />
